--- a/views/print.hbs
+++ b/views/print.hbs
@@ -91,6 +91,9 @@
         .change-lan:hover, .change-font:hover{
             color: #444;
         }
+        body[data-ip=HK] .barcode-container {
+            height: 340px;
+        }
     </style>
     <script type="text/javascript">
         function init() {
@@ -408,9 +411,9 @@
             tips: [
                 '烘焙產品對環境溫度敏感度不同，容易影響各種口感，建議收貨時間與食用時間間隔30分鐘；',
                 '保存條件：0-4℃冷藏保存一天，4小時內5℃食用最佳；',
-                '承诺退：實物不對版，退款不退貨！',
-                '承诺減：約定時間，遲到一分鐘減一元！',
-                '承诺送：遲到30分鐘免費贈送！'
+                // '承诺退：實物不對版，退款不退貨！',
+                // '承诺減：約定時間，遲到一分鐘減一元！',
+                // '承诺送：遲到30分鐘免費贈送！'
             ],
             qrcode: false,
             right_side_info: '生產︵白︶客戶︵紅︶財務︵藍︶物流︵黃︶',
